<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mn_camera_edit"
        android:title="@string/camera"
        app:showAsAction="always"
        android:icon="@drawable/ic_photo_camera"></item>
    <item android:id="@+id/mn_set_background_edit"
        android:title="@string/set_background"
        app:showAsAction="always"
        android:icon="@drawable/ic_view"></item>
    <item android:id="@+id/mn_save_edit"
        android:title="@string/save"
        app:showAsAction="always"
        android:icon="@drawable/ic_check"></item>
    <item android:id="@+id/mn_new"
        app:showAsAction="always"
        android:icon="@drawable/ic_view_comfy"
        android:title="@string/new_note">
    </item>
</menu>