<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rv_picture"
        style="@style/styleView"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tv_alarm_add"
        android:text="@string/add"
        android:gravity="center|right"
        style="@style/styleView"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/et_title"
        android:hint="@string/title"
        style="@style/styleView"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/et_content"
        android:hint="@string/note"
        style="@style/styleView"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="@style/styleView"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/iv_clock"
            android:src="@drawable/ic_alarm"
            style="@style/styleView"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_date"
            android:text="@string/alarm"
            android:layout_gravity="center"
            style="@style/styleView"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_time"
            style="@style/styleView"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/iv_cancel"
            android:src="@drawable/ic_close"
            android:visibility="invisible"
            style="@style/styleView"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>